--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce",
+  "name": "ecommerce-front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,15 +8,17 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "stl-viewer": "^0.12.0",
+    "styled-components": "^5.1.1",
     "website-scraper": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts src/test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
