--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-router-dynamic-breadcrumbs": "^2.2.0",
     "react-scripts": "^3.4.1",
+    "react-slideshow-image": "^1.5.3",
     "stl-viewer": "^0.12.0",
     "styled-components": "^5.1.1",
     "website-scraper": "^4.2.1"
